[package]
name = "cookie_monster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.1.2"
inputbot = "0.5.1"
screenshot = "0.0.7"
anyhow = "1.0.70"
chrono = "0.4.24"
libc = "0.2.142"
image = "0.24.6"